--- a/peaq.service
+++ b/peaq.service
@@ -1,10 +1,10 @@
 /etc/systemd/system/peaq.service
 [Unit] Description=Peaq Node
 [Service] 
-User=<enter user e.g. augung>
-Group=<enter group e.g. augung> 
-ExecStart=<directory_of_script e.g. /var/network/start_node.sh> 
-WorkingDirectory=<path to startup script e.g. /var/network>
+User=AS12
+Group=AS123
+ExecStart=/home/Peaq/start_node.sh 
+WorkingDirectory=/home/Peaq/
 Restart=always 
 RestartSec=60
 [Install] 
